# Intersection_Traffic_Simulation

./: ApplicationClass.cpp  ApplicationClass.h  CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  HeadClass.cpp  HeadClass.h  InputData.cpp  InputData.h  OutputData.cpp  OutputData.h  README.md  Road.cpp  Road.h  TrafficLight.cpp  TrafficLight.h  Vehicle.cpp  Vehicle.h  main.cpp
